--- a/Makefile.am
+++ b/Makefile.am
@@ -423,6 +423,8 @@ EXTRA_DIST = \
 	LICENSE \
 	isl_config_post.h \
 	basis_reduction_templ.c \
+	bmap_to_sys_inl.c \
+	bmap_from_sys_inl.c \
 	bset_to_bmap.c \
 	bset_from_bmap.c \
 	extract_key.c \
@@ -478,6 +480,7 @@ EXTRA_DIST = \
 	set_to_map.c \
 	set_from_map.c \
 	set_list_from_map_list_inl.c \
+	isl_system_bound_templ.c \
 	isl_tab_lexopt_templ.c \
 	uset_to_umap.c \
 	uset_from_umap.c \
