ISLPP extensions after rebasing on trunk

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,12 @@ test-driver
 isl_srcdir.c
 bound_test.sh
 pip_test.sh
+
+codegen_test.sh
+interface/extract_interface
+interface/isl-noexceptions.h
+interface/test/CMakeLists.txt
+interface/test/build/
+isl_codegen
+isl_schedule
+isl_test_int
