--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ pip_test.sh
 
 codegen_test.sh
 interface/extract_interface
-interface/isl-noexceptions.h
+# interface/isl-noexceptions.h
 interface/test/build/
 isl_codegen
 isl_schedule
