--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,17 @@ dist: trusty
 
 sudo: required
 
-before_install:
-        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-        - sudo apt-get update -y
-        - sudo apt-get install -y automake gcc-4.9 g++-4.9 git cmake3 libgmp3-dev libtool
-
 env:
         - CMAKE_VERSION=cmake CORES=2
 
 cache:
-        apt: true
         directories:
         - /tmp/clang+llvm
+        - /tmp/apt-cache/
+
+before_script:
+        - export APT_CACHE_DIR=/tmp/apt-cache && mkdir -pv $APT_CACHE_DIR
+        - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y && sudo apt-get update -yq && sudo apt-get -o dir::cache::archives="$APT_CACHE_DIR" install -y automake gcc-4.9 g++-4.9 git cmake3 libgmp3-dev libtool
 
 script:
         - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 90
