interface/isl_test_cpp-noexceptions.cc: extract out generic tests
In particular, extract out those tests that do not depend
on the absence of exceptions.
These will be reused to test the C++ bindings with exceptions,
which will be added next.

Signed-off-by: Sven Verdoolaege <sven.verdoolaege@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -391,6 +391,7 @@ EXTRA_DIST = \
 	interface/isl-noexceptions.h.pre \
 	interface/isl-noexceptions.h.bot \
 	interface/isl.py.top \
+	interface/isl_test_cpp-generic.cc \
 	interface/isl_test_python.py \
 	test_inputs
 
