--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,10 @@
 version: 2
 jobs:
-  "build-centos":
-    working_directory: ~/isl
-    resource_class: xlarge
-    docker:
-      - image: nicolasvasilache/tc-centos:latest
-
-    steps:
-      - checkout
-
-      - run:
-          name: build-isl
-          command: |
-            cd ~/isl
-            export ISL_DIR=$(pwd)
-            VERBOSE=1 TRAVIS=1 CORES=16 CMAKE_VERSION="cmake" CLANG_PREFIX="$(llvm-config-4.0 --prefix)" ./build.sh --isl
-
-      - run:
-          name: test_isl
-          command: |
-            cd ~/isl
-            ./flags.sh ./build/isl_test
-            ./flags.sh ./build/isl_test_int
-
   "build-1404":
     working_directory: ~/isl
     resource_class: xlarge
     docker:
-      - image: nicolasvasilache/tc-1404:latest
+      - image: nicolasvasilache/tc-1404-llvm4.0-src:latest
 
     steps:
       - checkout
@@ -37,7 +14,7 @@ jobs:
           command: |
             cd ~/isl
             export ISL_DIR=$(pwd)
-            VERBOSE=1 TRAVIS=1 CORES=16 CMAKE_VERSION="cmake" CLANG_PREFIX="$(llvm-config-4.0 --prefix)" ./build.sh --isl
+            VERBOSE=1 TRAVIS=1 CORES=16 CMAKE_VERSION="cmake" CLANG_PREFIX="$(/clang+llvm-4.0/bin/llvm-config --prefix)" ./build.sh --isl
 
       - run:
           name: test_isl
@@ -50,7 +27,7 @@ jobs:
     working_directory: ~/isl
     resource_class: xlarge
     docker:
-      - image: nicolasvasilache/tc-1604:latest
+      - image: nicolasvasilache/tc-1604-llvm4.0-src:latest
 
     steps:
       - checkout
@@ -60,7 +37,7 @@ jobs:
           command: |
             cd ~/isl
             export ISL_DIR=$(pwd)
-            VERBOSE=1 TRAVIS=1 CORES=16 CMAKE_VERSION="cmake" CLANG_PREFIX="$(llvm-config-4.0 --prefix)" ./build.sh --isl
+            VERBOSE=1 TRAVIS=1 CORES=16 CMAKE_VERSION="cmake" CLANG_PREFIX="$(/clang+llvm-4.0/bin/llvm-config --prefix)" ./build.sh --isl
 
       - run:
           name: test_isl
@@ -72,6 +49,5 @@ workflows:
   version: 2
   build:
     jobs:
-      #- "build-centos"
       - "build-1404"
       - "build-1604"
