CMakeLists.txt: drop references to PIPLIB_INCLUDE_DIRS
It is not clear why they were introduced in the first place.
PIPLIB_INCLUDE_DIRS has never been set.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -344,7 +344,7 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 function(configure_isl_lib_build LIB)
   set_target_properties(${LIB} PROPERTIES FOLDER "Integer Set Library")
-  target_include_directories(${LIB} PRIVATE "${ISL_BINARY_DIR}" "${ISL_SOURCE_DIR}" ${PIPLIB_INCLUDE_DIRS})
+  target_include_directories(${LIB} PRIVATE "${ISL_BINARY_DIR}" "${ISL_SOURCE_DIR}")
   target_include_directories(${LIB} PUBLIC "${ISL_BINARY_DIR}/include" "${ISL_SOURCE_DIR}/include")
   if (USE_GMP_FOR_MP)
     target_include_directories(${LIB} PUBLIC ${GMP_INCLUDE_DIRS})
@@ -367,7 +367,7 @@ macro (add_isl_executable _name)
   set(_sources ${ARGN})
   add_executable("${_name}" ${_sources})
   set_target_properties("${_name}" PROPERTIES FOLDER "Integer Set Library")
-  target_include_directories("${_name}" PRIVATE "${ISL_SOURCE_DIR}" "${ISL_BINARY_DIR}" ${GMP_INCLUDE_DIRS} ${PIPLIB_INCLUDE_DIRS})
+  target_include_directories("${_name}" PRIVATE "${ISL_SOURCE_DIR}" "${ISL_BINARY_DIR}" ${GMP_INCLUDE_DIRS})
   target_link_libraries("${_name}" isl)
 endmacro ()
 
