CMakeLists.txt: drop GMP_INCLUDE_DIRS from executable target_include_directories
The path containing the GMP headers may also contain system isl headers,
so it should not be added before the local include paths.
Those are not explicitly set for the executables, apparently
relying on them getting inherited from the isl library
target_include_directories.  Do the same for GMP_INCLUDE_DIRS,
as it is added there after the local include paths.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,7 +367,7 @@ macro (add_isl_executable _name)
   set(_sources ${ARGN})
   add_executable("${_name}" ${_sources})
   set_target_properties("${_name}" PROPERTIES FOLDER "Integer Set Library")
-  target_include_directories("${_name}" PRIVATE "${ISL_SOURCE_DIR}" "${ISL_BINARY_DIR}" ${GMP_INCLUDE_DIRS})
+  target_include_directories("${_name}" PRIVATE "${ISL_SOURCE_DIR}" "${ISL_BINARY_DIR}")
   target_link_libraries("${_name}" isl)
 endmacro ()
 
